--- a/wine-quality/Wine_Quality.ipynb
+++ b/wine-quality/Wine_Quality.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "authorship_tag": "ABX9TyMKub9S//kpNnBsV7lOAesm",
-      "include_colab_link": True
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
